--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <button id="themeSwitcher" aria-label="Переключити тему">🌞/🌜</button>
 
   <div class="calculator" role="main" aria-label="HEX калькулятор">
-    <h2>Калькулятор (16-кова система)</h2>
+    <h2>Калькулятор (16-кова система)!!</h2>
     <label for="hex1">Число 1 (HEX):</label>
     <input type="text" id="hex1" placeholder="Наприклад: A3" aria-describedby="hex1desc" />
     <small id="hex1desc">Введіть шістнадцяткове число (0-9, A-F)</small>
